Fixed Dynamic Table overflow bug

--- a/public/widgets/dynamictable/dynamictable-content.css
+++ b/public/widgets/dynamictable/dynamictable-content.css
@@ -1,5 +1,5 @@
 .widget-dynamictable {
-  overflow: visible;
+  overflow: hidden;
 }
 .dynamictable-widget {
   height: 100%;
